k8s/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-svc
  labels:
    app: auth
spec:
  selector:
    matchLabels:
      app: auth-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: auth-svc
    spec:
      containers:
        - name: auth-container
          image: ghcr.io/avickars/auth:v1
          imagePullPolicy: Always
          ports:
          - name: http
            containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
spec:
  selector:
    app: auth-svc
  ports:
  - port: 80
    protocol: "TCP"
    targetPort: 3000
