k8s/playlist.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playlist-deploy
  labels:
    app: playlist
spec:
  selector:
    matchLabels:
      app: playlist
  replicas: 1
  template:
    metadata:
      labels:
        app: playlist
    spec:
      containers:
        - name: playlist
          image: ghcr.io/avickars/playlist:v1
          imagePullPolicy: Always
          ports:
          - name: http
            containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: playlist-svc
spec:
  selector:
    app: playlist
  ports:
  - port: 80
    protocol: "TCP"
    targetPort: 5000
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: playlist-deploy
#  labels:
#    type: restapi
#spec:
#  selector:
#    matchLabels:
#      app: playlist
#  replicas: 1
#  template:
#    metadata:
#      name: playlist-tmpl
#      labels:
#        app: playlist
#    spec:
#      containers:
#        - name: playlist
#          image: ghcr.io/avickars/playlist:v1
#          imagePullPolicy: Always
#          ports:
#          - name: http
#            containerPort: 5000
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: playlist-svc
#spec:
#  type: LoadBalancer
#  selector:
#    app: playlist
#  ports:
#  - name: http
#    protocol: "TCP"
#    port: 5000
#    targetPort: http
