k8s/subscription.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscription-svc
#  labels:
#    app: subscription
spec:
  selector:
    matchLabels:
      app: subscription-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: subscription-svc
    spec:
      containers:
        - name: subscription-container
          image: ghcr.io/avickars/subscription:v1
          imagePullPolicy: Always
          ports:
          - name: http
            containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: subscription-svc
spec:
  selector:
    app: subscription-svc
  ports:
  - port: 80
    protocol: "TCP"
    targetPort: 4000
