k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: playlist
      protocol: HTTP
    hosts:
      - 'playlist.host'
  - port:
      number: 80
      name: subscription
      protocol: HTTP
    hosts:
      - 'subscription.host'
