k8s/auth_vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-auth
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
    - name: "auth-route"
      match:
        - uri:
            prefix: /api/v1/auth/
      route:
        - destination:
            port:
              number: 80
            host: auth-svc.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: auth-svc
spec:
  host: auth-svc
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
