k8s/auth_vs_fault.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-auth
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
    - name: "auth-route"
      match:
        - uri:
            prefix: /api/v1/auth/
      route:
        - destination:
            port:
              number: 80
            host: auth-svc.default.svc.cluster.local
      fault:
        delay:
          percentage:
            value: 50
          fixedDelay: 5s
        abort:
          httpStatus: 500
          percentage:
            value: 50
