k8s/playlist_vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-playlist
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
    - name: "playlist-route"
      match:
        - uri:
            prefix: /api/v1/music/
      route:
        - destination:
            port:
              number: 80
            host: playlist-svc.default.svc.cluster.local
