k8s/subscription_vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-subscription
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
    - name: "subscription-route"
      match:
        - uri:
            prefix: /api/v1/subscribe/
      route:
        - destination:
            port:
              number: 80
            host: subscription-svc.default.svc.cluster.local
